# DeepSeek-Mobile

./: .env.example  .gitattributes  .gitignore  Cargo.toml  PROJECT_STATUS.md  README.md  RELEASE_NOTES.md  ROADMAP.md  deploy.ps1  dioxus.toml  enable-pc-host-firewall.cmd  full-rebuild-verify.ps1  rustfmt.toml  termux-setup.ps1
.github/workflows/: ci.yml  release.yml  rust.yml
android/: AndroidManifest.xml  MainActivity.kt  keystore.properties.example  settings.gradle.kts
android/app/: build.gradle.kts  local.properties
android/bridge/: build.gradle.kts  consumer-rules.pro
crates/core/: Cargo.toml
crates/core/src/: agent.rs  api_client.rs  app_update.rs  approval.rs  approval_card.rs  approval_session.rs  approval_session_runtime.rs  auto_commit.rs  chat_input.rs  config.rs  config_bootstrap.rs  config_store.rs  context.rs  durable_task.rs  engine.rs  events.rs  executor.rs  github.rs  large_output.rs  lib.rs  mcp.rs  mcp_client.rs  model_router.rs  pc_gateway.rs  pc_gateway_client.rs  pc_gateway_discovery.rs  pc_logs.rs  pc_pairing.rs  runtime_store.rs  session.rs  skills.rs  snapshots.rs  tool_approval_paths.rs  tool_call.rs  tool_execution.rs  tool_loop.rs  turn.rs  workspace.rs  workspace_connection.rs  workspace_connection_store.rs  (+4 more)
crates/core/src/tools/: file_ops.rs  file_summary.rs  git.rs  github.rs  mcp_proxy.rs  mod.rs  open_path.rs  patch.rs  phone_bridge.rs  shell.rs  snapshots.rs  web.rs  workspace_overview.rs
crates/mobile/: Cargo.toml  build.rs
crates/mobile/.deepseek-mobile/: .calibration_trace
crates/mobile/src/: agent_event_adapter.rs  agent_mode_bar.rs  agent_timeline.rs  agent_timeline_panel.rs  agent_turn_probe.rs  android_host.rs  android_plugin.rs  api_probe.rs  app_update_state.rs  approval_diff_preview.rs  attachment_ingestion.rs  chat_attachment.rs  chat_file_links.rs  chat_history_panel.rs  chat_quick_actions.rs  chat_scroll.rs  chat_session.rs  chat_toolbar.rs  cockpit_section_panel.rs  desktop_native_host.rs  dev_api_key.rs  dev_bootstrap.rs  device_calibration.rs  diagnostics_panel.rs  diagnostics_state.rs  document_picker.rs  git_panel.rs  git_state.rs  health_panel.rs  host_loop.rs  jni_bridge.rs  lib.rs  locale.rs  main.rs  mcp_panel.rs  mcp_state.rs  mobile_approval_panel.rs  mobile_data_dir.rs  mobile_drawer.rs  mobile_engine_runner.rs  (+43 more)
crates/pc-host/: Cargo.toml  README.md
crates/pc-host/src/: main.rs  mdns_advertise.rs
docs/: ADB_CONTROL.md  CAPABILITY_MATRIX.md  CORE_STATUS.md  CURRENT_STATE.md  DEVICE_CHECKLIST.md  DEVICE_E2E_RESULTS.md  DEVICE_SETUP.md  EXTENDED_CONTROL_ROADMAP.md  INSTALL_PC_WINDOWS.md  INSTALL_UPDATE.md  MASTER_PLAN.md  PC_HOST_E2E.md  PHONE_PC_OPERATING_MODEL.md  PRODUCT_POSITIONING.md  PROGRESS.md  PROJECT_AUDIT.md  ROADMAP.md  TOOL_AUDIT.md  TROUBLESHOOTING.md  TUI_COMPATIBILITY_STUDY.md  UI_STATUS_AND_VERIFICATION.md  ZIP_IMPORT_UI_TEST.md  android_document_picker_bridge.md  android_host_integration.md
scripts/: adb-control.ps1  build-pc-host-bundles.ps1  build-release-apk.ps1  capture-chat-log.ps1  clean_systemdrive.py  device-api-probe.ps1  device-calibrate.ps1  device-e2e-copy-file.ps1  device-e2e-delete-file.ps1  device-e2e-file-create.ps1  device-e2e-mcp.ps1  device-e2e-pc-host.ps1  device-e2e-pc-pairing-bundle.ps1  device-e2e-project-workflow.ps1  device-e2e-snapshots.ps1  device-e2e-tools-sandbox.ps1  device-e2e-verify.ps1  device-e2e-zip-export.ps1  device-e2e-zip-import.ps1  device-full-verify.ps1  device-provision.ps1  device-smoke.ps1  device-termux-pwd-probe.ps1  enable-pc-host-mdns-windows.ps1  install-pc-host-from-pairing.ps1  install-pc-host-from-pairing.sh  install-pc-host-linux.sh  install-pc-host-windows.ps1  install-phone-apk.ps1  install-termux-offline.ps1  install-windows.ps1  mcp-demo-http.ps1  mcp_demo_http_server.py  pc-host-e2e.ps1  publish-github-release.ps1  push-mcp-config-to-device.ps1  push-skills-to-device.ps1  run-device-checklist.ps1  setup-android-offline.ps1  setup-pc-windows.ps1  (+3 more)
skills-bundle/: INSTALL_SKILLS.md
skills-bundle/skills/adb-e2e-testing-discipline/: SKILL.md
skills-bundle/skills/analytical-artifacts-discipline/: SKILL.md
skills-bundle/skills/cursor-sdk-automation/: SKILL.md
skills-bundle/skills/datadog-mcp-config/: SKILL.md
skills-bundle/skills/datadog-mcp-setup/: SKILL.md
skills-bundle/skills/datadog-mcp-toolsets/: SKILL.md
skills-bundle/skills/git-workflow-discipline/: SKILL.md
skills-bundle/skills/mcp-integration-discipline/: SKILL.md
skills-bundle/skills/mobile-config-secrets-discipline/: SKILL.md
tools/android/: DOWNLOAD_BUDGET.md  README.md  env.ps1  sync-sdk-from-system.ps1
(+29 files in other folders)
