[workspace]
members = [
    "crates/core",
    "crates/mobile",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
dioxus = { version = "0.7", features = ["mobile"] }
dioxus-mobile = "0.7"
deepseek-mobile-core = { path = "crates/core" }