[workspace]
members = [
    "crates/core",
    "crates/mobile",
    "crates/pc-host",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
axum = "0.7"
tokio-stream = "0.1"
zip = "0.6"
dioxus = { version = "0.7", features = ["mobile"] }
deepseek-mobile-core = { path = "crates/core" }
