[package]
name = "deepseek-mobile-core"
version = "0.1.1"
edition = "2021"

[dependencies]
tokio = { workspace = true }
anyhow = "1"
serde = { workspace = true }
serde_json = "1.0"
reqwest = { workspace = true }
tracing = "0.1"
zip = { workspace = true }

# Из оригинального DeepSeek-TUI
futures-util = "0.3"
futures = "0.3"
base64 = "0.22"
chacha20poly1305 = "0.10"
rand = "0.8"