[package]
name = "deepseek-mobile"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true }
dioxus-mobile = { workspace = true }
dioxus-signals = { workspace = true }
dioxus-router = { workspace = true }
deepseek-mobile-core = { workspace = true }

[features]
default = ["mobile"]
mobile = []
