[package]
name = "deepseek-mobile"
version = "0.1.4"
edition = "2021"

[lib]
name = "deepseek_mobile"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "deepseek-mobile"
path = "src/main.rs"

[dependencies]
dioxus = { workspace = true }
deepseek-mobile-core = { workspace = true }
tokio = { workspace = true }
anyhow = "1"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
reqwest = { workspace = true }

[target.'cfg(not(target_os = "android"))'.dependencies]
rfd = "0.15"
open = "5"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1"
manganis = "0.7"
