[package]
name = "deepseek-pc-host"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
deepseek-mobile-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = "0.1"
mdns-sd = { workspace = true }
